--- a/scss/sections/footer.scss
+++ b/scss/sections/footer.scss
@@ -6,6 +6,15 @@
         justify-content: space-between;
         margin-bottom: 100px;
         padding: 119px 100px 147px;
+
+        @include desktop {
+            padding: 80px 60px;
+            gap: 20px;
+        }
+        @include desktop-small {
+            flex-direction: column;
+            gap: 50px;
+        }
     }
     
     &__info {
@@ -13,6 +22,13 @@
         display: flex;
         flex-direction: column;
         gap: 32px;
+
+        @include desktop-small {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 100%;
+        }
     }
     
     &__logo_title a {
@@ -26,10 +42,15 @@
         line-height: 167%;
         letter-spacing: 0.02em;
         color: #8e8e8e;
+
+        @include desktop-small {
+            text-align: center;
+        }
     }
     
     &__social {
         display: flex;
+        align-items: center;
         gap: 14px;
         max-width: 250px;
 
@@ -42,6 +63,15 @@
         font-family: var(--second-font);
         display: flex;
         gap: 168px;
+
+        @include desktop {
+            gap: 40px;
+            justify-content: space-between;
+        }
+
+        @include desktop-small {
+            gap: 40px;
+        }
     }
     
     &__ul {
@@ -49,6 +79,10 @@
         flex-direction: column;
         justify-content: center;
         gap: 32px;
+
+        @include desktop-small {
+            align-items: center;
+        }
     }
 
     &__li:not(.footer__nav_title) a:hover {
