--- a/scss/sections/join.scss
+++ b/scss/sections/join.scss
@@ -5,6 +5,10 @@
         padding: 141px 460px 156px;
         text-align: center;
         font-family: var(--main-font);
+
+        @include desktop {
+            padding: 100px 200px;
+        }
     }
     
     &__title {
@@ -15,6 +19,10 @@
         text-align: center;
         color: var(--c-white);
         margin-bottom: 37px;
+
+        @include desktop {
+            font-size: 48px;
+        }
     }
     
     &__desc {
@@ -62,6 +70,10 @@
         background: var(--c-black);
         border-radius: 8px;
         padding: 16px 35px;
+
+        @include desktop {
+            font-size: 28px;
+        }
     }
 }
 
